Made a second version of the playground that had a better UI

--- a/Sunrise_Finder/Sunrise_Finder/Info.plist
+++ b/Sunrise_Finder/Sunrise_Finder/Info.plist
@@ -43,5 +43,22 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSExceptionDomains</key>
+        <dict>
+            <key>app.toronto.ca</key>
+            <dict>
+                <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+            </dict>
+        </dict>
+    </dict>
+
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>The application uses this information to find the cooling centre nearest you.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>The application uses this information to find the cooling centre nearest you.</string>
 </dict>
 </plist>
