This is my final commit; the finished project is in the V2 of the file.

--- a/Sunrise_Finder/Sunrise_Finder/Info.plist
+++ b/Sunrise_Finder/Sunrise_Finder/Info.plist
@@ -48,7 +48,7 @@
     <dict>
         <key>NSExceptionDomains</key>
         <dict>
-            <key>app.toronto.ca</key>
+            <key>http://api.sunrise-sunset.org/json?</key>
             <dict>
                 <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
                 <true/>
